<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintVertical_chainStyle="spread_inside"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Welcome \nNizamuddin"
            android:layout_marginTop="@dimen/margin_very_big"
            android:layout_marginBottom="@dimen/margin_big"
            style="@style/Application.Text.Headline.Large"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/txtDate" />

        <TextView
            android:id="@+id/bagNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bag No : 5"
            android:layout_marginTop="@dimen/margin_very_big"
            android:layout_marginBottom="@dimen/margin_big"
            style="@style/Application.Text.Headline.Medium"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="@id/txtDate" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtDate"
            android:layout_marginTop="@dimen/margin_very_big"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bagNo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:layout_constraintWidth_percent="0.75"
            android:hint="@string/date"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eTDate"
                android:imeOptions="actionNext"
                android:inputType="date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtTroughNo"
            android:layout_marginTop="@dimen/margin_very_big"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtDate"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:layout_constraintWidth_percent="0.75"
            android:hint="@string/trough_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eTTroughNo"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtKGs"
            android:layout_marginTop="@dimen/margin_very_big"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtTroughNo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:layout_constraintWidth_percent="0.75"
            android:hint="@string/kgs"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eTTKgs"
                android:imeOptions="actionDone"
                android:maxLength="10"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            app:layout_constraintBottom_toTopOf="@id/downloadBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/clearBtn"
                android:layout_margin="@dimen/margin_big"
                style="@style/Widget.Material3.Button.TonalButton"
                android:text="@string/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveBtn"
                android:layout_margin="@dimen/margin_big"
                style="@style/Widget.Material3.Button"
                android:text="@string/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            app:layout_constraintBottom_toTopOf="@id/bottomLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/downloadBtn"
            android:layout_margin="@dimen/margin_very_big"
            style="@style/Widget.Material3.Button.TonalButton"
            android:text="@string/down_in_excel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/bottomLayout"
            android:layout_margin="@dimen/margin_large"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@mipmap/ic_launcher_round"
                android:layout_width="@dimen/icon_small"
                android:layout_height="@dimen/icon_small"/>

            <TextView
                android:layout_marginStart="@dimen/margin_medium"
                android:textStyle="bold"
                style="@style/Application.Text.Body.Medium"
                android:text="T Production"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>